--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,12 @@
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"moduleResolution": "Node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react-jsx"
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules", "src/**/*.spec.ts"],
+	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
